[package]
name = "cranelift_bug"
version = "0.1.0"
authors = ["Paris DOUADY <paris.douady@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.13.0", default-features = false, features = ["vorbis"] }

[profile.dev.package."*"]
opt-level = 2